--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -56,15 +56,17 @@ if (!file.exists(here("paper/image"))){
 
 # 1. Introduction
 
-Deliberate teaching has supported human skill transmission over generations and provides a key route for learning [@tomasello_2016; @whiten_2017]. Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners [@brand_2002; @fernald_1985]. These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners [@uther_2007] and when skilled adults were teaching xylophone melodies to novices [@mcellin_2017]. The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory [@csibra_2009].
+Deliberate teaching has supported human skill transmission over generations and provides a key route for learning [@thornton_2008; @tomasello_2016]. Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners [@brand_2002; @fernald_1985]. These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners [@uther_2007] and when skilled adults were teaching xylophone melodies to novices [@mcellin_2017]. The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory [@csibra_2009].
 
 Previous research has shown that demonstrators not only adjust their gestures [@campisi_2013] and actions [@fukuyama_2015] to learners' skills but engage in specific action modulations to highlight particular aspects of demonstrated actions. For example, @schaik_2019 showed that adults used specific action modulations for demonstrating different action effects of objects to infants. @NIPS2016_6413 found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
 
 Importantly, in some domains teaching requires not only demonstrating *what* to do, but *how* to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on particular techniques [@sloboda_2000]. For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques [@juslin_2003]. This raises the question of whether and how experts modulate their actions during demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
 
-In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). 
+In the present experiments, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). 
 
-If experts rely on generic action modulations, it can be expected that they will play more slowly during demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
+If experts rely on generic action modulations, it can be expected that they will play more slowly during teaching demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
+
+In Experiment 1, we employed a simple musical scale to examine whether and how skilled pianists varied their performances depending on which expressive techniques (i.e., either articulation or dynamics) they were supposed to teach. Experiment 2 was conducted to replicate our findings from Experiment 1 with a more realistic piece of music.
 
 \clearpage
 
@@ -280,7 +282,9 @@ img_vel_diff_dyn_1
 
 ## 2.4. Discussion
 
-Blah
+The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), although there was a general trend of slowing down, we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e. to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspect of the technique. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques.
+
+One of the limitations of Experiment 1 is that we employed a simple musical scale, which was good to gain an experimental control but not a realistic and natural stimulus to implement artistic expressions. In Experiment 2, we chose one piece of music from actual piano pieces and modified it for the purpose of the experiment. We predict that participants will played more slowly regardless of the techniques to be taught or only when teaching articulation based on the finding from Experiment 1. Also, we expect that participants will be able to highlight only the relevant aspects of the techniques to be taught. More precisely, they should be able to produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, participants will make a larger contrast between forte and piano at transition points.
 
 \newpage
 
@@ -473,7 +477,7 @@ image_write(img_vel_2, path = here("paper/image", "img_vel_2.png"), format = "pn
 img_vel_2
 ```
 
-```{r plot-vel-diff-2, out.width = "100%", fig.cap = "\\label{fig:vel-diff-1}Experiment 2: KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
+```{r plot-vel-diff-2, out.width = "100%", fig.cap = "\\label{fig:vel-diff-2}Experiment 2: KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
 img_vel_diff_dyn_2
 ```
 ## 3.4. Discussion
