correct SD = mean to SD = sd
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-1/analysis/stats/dynamics.Rmd
+++ b/experiment-1/analysis/stats/dynamics.Rmd
@@ -249,7 +249,7 @@ ggboxplot(dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N =
 
 ```{r vel-diff-dyn-all, echo = FALSE}
 # Group mean
-vel_diff_dyn_all <- vel_diff_dyn[, .(N = .N, Mean = mean(Mean), SD = mean(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent)]
+vel_diff_dyn_all <- vel_diff_dyn[, .(N = .N, Mean = mean(Mean), SD = sd(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent)]
 vel_diff_dyn_all
 ```
 
@@ -294,7 +294,7 @@ vel_diff_dyn_posthoc
 
 ```{r vel-diff-dyn-trial, echo = FALSE}
 # For each individual
-vel_diff_dyn_trial <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = mean(Diff)), by = .(SubNr, Condition, Skill, Subcomponent,TrialNr)]
+vel_diff_dyn_trial <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent,TrialNr)]
 vel_diff_dyn_trial
 ```
 
@@ -317,7 +317,7 @@ ggline(dt_vel_diff_dyn[Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD =
 
 ```{r vel-diff-dyn-trial-all, echo = FALSE}
 # Group mean
-vel_diff_dyn_trial_all <- vel_diff_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = mean(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent, TrialNr)]
+vel_diff_dyn_trial_all <- vel_diff_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent, TrialNr)]
 vel_diff_dyn_trial_all
 ```
 
