correct some stats reports
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -208,7 +208,7 @@ We performed separate analyses for the two expressive techniques (i.e., articula
 \hypertarget{results-articulation}{%
 \subsection{2.2. Results (Articulation)}\label{results-articulation}}
 
-All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}). followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}).
+All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}).
 
 \hypertarget{interonset-intervals-iois}{%
 \subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
@@ -241,7 +241,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{kv-transition-points}{%
 \subsubsection{2.3.3. KV Transition Points}\label{kv-transition-points}}
 
-Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated a KV difference for each interval subtracting the KV value of the current note from that of the following note. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]} (FtoP; \emph{p} = 0.002, PtoF; \emph{p} \textless{} 0.001).
+Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated a KV difference for each interval by subtracting the KV value of the current note from that of the following note. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]} (FtoP; \emph{p} = 0.002, PtoF; \emph{p} \textless{} 0.001).
 
 \hypertarget{key-overlap-time-kot-1}{%
 \subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
@@ -251,9 +251,9 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{discussion}{%
 \subsection{2.4. Discussion}\label{discussion}}
 
-The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspect of the technique. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques.
+The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspects of the techniques. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
 
-One of the limitations of Experiment 1 is that we employed a simple musical scale, which was good to gain an experimental control but not a naturalistic stimulus to implement artistic expressions. In Experiment 2, we chose one piece of music from actual piano pieces and modified it for the purpose of the experiment. We predict that participants will played more slowly regardless of the techniques to be taught or only when teaching articulation based on the finding from Experiment 1. Also, we expect that participants will be able to highlight only the relevant aspects of the techniques to be taught. More precisely, they should be able to produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, participants will make a larger contrast between forte and piano at transition points.
+One of the limitations of Experiment 1 is that we employed a simple musical scale, which was suitable to gain an experimental control. However the stimulus was not a naturalistic piece to implement artistic expressions. In Experiment 2, we chose one piece of music from actual piano pieces and modified it for the purpose of the experiment. We predict that participants will played more slowly regardless of the techniques to be taught or only when teaching articulation based on the finding from Experiment 1. Also, we expect that participants will be able to highlight only the relevant aspects of the techniques to be taught. More precisely, they should be able to produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, participants will make a larger contrast between forte and piano at transition points.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
@@ -293,32 +293,34 @@ We employed the same procedure as Experiment 1 with several modifications. First
 \hypertarget{design-and-data-analysis-1}{%
 \subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis-1}}
 
-Data cleaning, preprocessing and statistical analysis were identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. Also, IOIs were normalised by their preferred tempo because each participant chose different tempi from the 3 options. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
+Data cleaning, preprocessing and statistical analysis were identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. IOIs were normalised by their preferred tempo because each participant chose different tempi from the 3 options. Key-overlap Ratio (KOR) was calculated by dividing KOT by the mean IOI of each performance in order to normalise KOT due to a different tempo for each participant. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
 \end{figure}
 
+\clearpage
+
 \hypertarget{results-articulation-1}{%
 \subsection{3.2. Results (Articulation)}\label{results-articulation-1}}
 
-As Experiment 1, we first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli-2}, B}). followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli-2}, C}).
+As Experiment 1, we first report results for performance of the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli-2}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli-2}, C}).
 
 \hypertarget{interonset-intervals-iois-2}{%
 \subsubsection{3.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-2}}
 
-A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.972, \emph{SD} = 0.042{]} than in the performing condition {[}\emph{M} = 0.958, \emph{SD} = 0.034{]} while playing the piece with notated articulation (\emph{t}(18) = 2.64
+A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.042{]} than in the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.034{]} while playing the piece with notated articulation (\emph{t}(18) = 2.64
 , \emph{p} = 0.017; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.026).
 
 \hypertarget{key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition than in the performing condition (\emph{p} = 0.001) while there was no significant difference in legato between the teaching and performing condition (\emph{p} = 0.85).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.77, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.001) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition{[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.85).
 
 \hypertarget{key-velocity-kv-2}{%
 \subsubsection{3.2.3. Key Velocity (KV)}\label{key-velocity-kv-2}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.011, \(\eta_G^2\) = 0.0400; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.46, \emph{p} = 0.506, \(\eta_G^2\) = 0.0008) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.799, \(\eta_G^2\) = 0.0001).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.011, \(\eta_G^2\) = 0.04; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.46, \emph{p} = 0.51, \(\eta_G^2\) = 0.001) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.80, \(\eta_G^2\) = 0.000).
 
 \hypertarget{results-dynamics-1}{%
 \subsection{3.3. Results (Dynamics)}\label{results-dynamics-1}}
@@ -326,27 +328,27 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{interonset-intervals-iois-3}{%
 \subsubsection{3.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-3}}
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.962, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.961, \emph{SD} = 0.037{]} while playing the piece with notated articulation (\emph{t}(18) = 0.37, \emph{p} = 0.719; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.922).
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.037{]} while playing the piece with notated articulation (\emph{t}(18) = 0.37, \emph{p} = 0.72; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.92).
 
 \hypertarget{key-velocity-kv-3}{%
 \subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126.10, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.7190) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.0217; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte and softer piano in the teaching condition than in the performing condition (Forte; \emph{p} = 0.036, Piano; \emph{p} = 0.028).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.7190) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte and softer piano in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition (Forte; \emph{p} = 0.036, Piano; \emph{p} = 0.028).
 
 \hypertarget{kv-transition-points-1}{%
 \subsubsection{3.3.3. KV Transition Points}\label{kv-transition-points-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 110.64, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.8167) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.0641; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition than in the performing condition (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 111, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.0641; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.35, \emph{SD} = 8.46, PtoF; \emph{M} = 20.60, \emph{SD} = 9.10{]} than in the performing condition {[}FtoP; \emph{M} = -13.71, \emph{SD} = 7.73, PtoF; \emph{M} = 15.87, \emph{SD} = 7.47{]} (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
 
 \hypertarget{key-overlap-ratio-kor-1}{%
 \subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.902, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.576, \emph{p} = 0.458, \(\eta_G^2\) = 0.00; \emph{Figure \ref{fig:kor-2}}).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.90, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.58, \emph{p} = 0.46, \(\eta_G^2\) = 0.001; \emph{Figure \ref{fig:kor-2}}).
 
 \hypertarget{discussion-1}{%
 \subsection{3.4. Discussion}\label{discussion-1}}
 
-The results from Experiment 2 demonstrated that we successfully replicated our earlier findings that skilled pianists were able to modulate their performance for teaching purposes. As Experiment 1, we observed slower performance only while teaching the notated articulation. With regard to KOR (articulation), participants highlighted articulation by producing shorter staccato. Again, there was no significant difference in legato between the two conditions as Experiment 1. In term of KV (dynamics), participants produced louder forte and softer piano, which showed a clearer pattern of exaggeration compared to Experiment 1 where only softer piano was observed. Furthermore, we again found that participants made a larger contrast between forte and piano bidirectionally at transition points. To sum, Experiment 2 confirmed that participants modified their performance in systematic and fine-grained ways in order to teach expressive techniques with a naturalistic piece of music.
+The results from Experiment 2 demonstrated that we successfully replicated our earlier findings that skilled pianists were able to modulate their performance for teaching purposes. As Experiment 1, we observed slower performance only while teaching the notated articulation. With regard to KOR (articulation), participants highlighted articulation by producing shorter staccato. Again, there was no significant difference in legato between the two conditions as Experiment 1. In term of KV (dynamics), participants produced louder forte and softer piano, which showed a clearer pattern of exaggeration compared to Experiment 1, where only softer piano was observed. Furthermore, we found that participants made a larger contrast between forte and piano bidirectionally at transition points. To sum, Experiment 2 confirmed that participants modified their performance in systematic and fine-grained ways in order to teach expressive techniques in a naturalistic piece of music.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
